<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"



    android:layout_height="match_parent"

    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:textSize="36sp"
        style="@style/titleThinBigDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/payment" />

    <ImageView
        android:src="@drawable/visa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/VISANAME"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/VISANUMBER"
        android:hint="@string/card_number"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/VISACVC"
            android:hint="@string/cvc"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/VISAAMOUNT"
            android:hint="@string/amount"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/SUBMITBTN"
            android:textColor="#FAFAFA"
            android:text="@string/submit"
            android:backgroundTint="#ffc107"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</LinearLayout>