<?xml version="1.0" encoding="UTF-8"?>

    <LinearLayout android:id="@+id/login" android:background="@drawable/gradient_list" android:gravity="center_horizontal" android:orientation="vertical" tools:context=".MainActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView android:layout_height="127dp" android:layout_width="250dp" android:contentDescription="@string/todo" android:layout_marginTop="130dp" app:srcCompat="@drawable/smile1" android:id="@+id/img"/>

    <EditText android:layout_height="50dp" android:layout_width="300dp" android:layout_marginTop="50dp" android:id="@+id/username" android:importantForAutofill="no" android:inputType="textEmailAddress" android:hint="@string/email" android:drawableStart="@drawable/ic_email"/>

    <EditText android:layout_height="50dp" android:layout_width="300dp" android:layout_marginTop="20dp" android:id="@+id/password" android:importantForAutofill="no" android:inputType="textPassword" android:hint="@string/upass" android:drawableStart="@drawable/ic_user_password"/>

    <Button android:background="#00ffe0" android:layout_height="40dp"  android:layout_width="200dp" android:layout_marginTop="20dp" android:id="@+id/login_btn" android:hint="@string/login"/>

    <LinearLayout android:orientation="horizontal" android:layout_height="35dp" android:layout_width="wrap_content" android:layout_marginTop="20dp">

    <TextView android:layout_height="35dp" android:layout_width="wrap_content" android:id="@+id/txtsignup" android:text="@string/register"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            />
</LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/fpassword"
        android:layout_height="wrap_content" android:layout_width="wrap_content"
        android:text="Forgot Password "/>
</LinearLayout>