<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout tools:context=".Registration" android:background="@drawable/gradient_list" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/registration"  >
    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"


                android:gravity="center"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="36sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content">

                <EditText

                    android:id="@+id/r_email"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_marginStart="30dp"

                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText

                    android:id="@+id/r_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_marginLeft="30dp"

                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText

                    android:id="@+id/r_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/r_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/address"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/r_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/dob"
                    android:importantForAutofill="no"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_marginLeft="30dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/r_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/fname"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/r_mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/mobile_no"
                    android:importantForAutofill="no"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_marginStart="30dp"
                android:layout_height="wrap_content">


                <RadioGroup
                    android:id="@+id/r_grp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textSize="20sp" />

                </RadioGroup>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="195dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:background="#00ffe0"
                android:gravity="center"
                android:text="@string/signup" />

        </LinearLayout>
</ScrollView>


    </RelativeLayout>