<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/problempost"
        android:background="@drawable/gradient_list"
        android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#000000">
        <ImageView android:layout_width="40dp"
            android:layout_height="80dp"
            android:src="@drawable/smile1"
            android:layout_marginStart="80dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Happy Homes"
            android:textStyle="bold"
            android:fontFamily="@font/arizonia"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:layout_marginLeft="10dp" />

    </androidx.appcompat.widget.Toolbar>
        <TextView
            android:id="@+id/textView19"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/problem_post"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="normal"
            android:textSize="25sp" />

    <LinearLayout
        android:layout_marginTop="80dp"

        android:layout_gravity="center"
     android:layout_height="wrap_content"
     android:layout_width="375dp"
        android:orientation="vertical">

         <EditText
            android:id="@+id/edtpname"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:ems="10"

            android:hint="@string/problem_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtdesc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/problem_desc"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />



        <EditText
            android:id="@+id/edtcat"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:text="@string/problem_cat"
            android:textSize="18sp" />

    <Button
            android:id="@+id/postbtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
            android:text="@string/post"
             android:background="#00ffe0" />

        <TextView
            android:id="@+id/txt"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textColor="#ff0000"
            />

    </LinearLayout>
    <Button
        android:id="@+id/btnappointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Booked Appointment"
        android:layout_gravity="center"
        android:background="#00ffe0"
        />
</LinearLayout>

